--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Solar System animation - Pure CSS</title>
+  <title>Selamat Datang</title>
   
   
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300'>
@@ -17,7 +17,7 @@
 <body>
 
   <div class='description'>
-  <h1>Solar System</h1>
+  <h1>Tata Surya</h1>
   <hr>
   <p>
     I know this is not the first one on CodePen, but I'm a space and physics lover, and I wanted to create mine :)
@@ -36,7 +36,7 @@
   <p class='author'>
     Made with
     <i class='fa fa-heart'></i>
-    by Malik Dellidj
+    <!--NAME-->
   </p>
   <p class='links'>
     <a class='fa fa-codepen icon' href='https://codepen.io/kowlor/' target='_blank'></a>
