--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <div class='description'>
-  <h1>Tata Surya</h1>
+  <h1>Solar System</h1>
   <hr>
   <p>
     I know this is not the first one on CodePen, but I'm a space and physics lover, and I wanted to create mine :)
